# Azure-RAG-Knowledge-Assistant

./: .env.example  .gitignore  README.md  azure-pipelines.yml  pyproject.toml  requirements.txt  streamlit_app.py  test_google_api.py  test_new_genai.py
.github/workflows/: ci.yml
app/: streamlit_app.py
app/api/: main.py
data/: sample_document.md  sample_questions.json
docs/: architecture.md
pages/: analytics.py
src/: __init__.py
src/analytics/: __init__.py  ab_testing.py  database.py  metrics.py
src/document_processor/: __init__.py  chunker.py  loader.py
src/embeddings/: __init__.py  generator.py
src/evaluation/: __init__.py  benchmark.py  metrics.py
src/rag/: __init__.py  chain.py  prompts.py  retriever.py
src/storage/: __init__.py  supabase_store.py
src/vectorstore/: __init__.py  azure_search.py  local_store.py
tests/: __init__.py  test_document_processor.py
